--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,17 @@
 		</dependency>
 
 	</dependencies>
+		<distributionManagement>
+		 <snapshotRepository>
+		    <id>nexus</id>
+		    <url>http://13.126.115.150:8081/repository/maven-snapshots/</url>
+		 </snapshotRepository>
+		
+		<repository>
+		    <id>nexus</id>
+		    <url>http://13.126.115.150:8081/repository/maven-releases/</url>
+		</repository>
+  	</distributionManagement>
 
 	
 </project>
