--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,12 @@
 		<docker.image.prefix>kammana</docker.image.prefix>
 	</properties>	
 	<dependencies>
-
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<!-- <scope>provided</scope> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
