--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,13 @@
 		<distributionManagement>
 		 <snapshotRepository>
 		    <id>nexusid</id>
+                    <name>sai</name>
 		    <url>http://10.142.0.13:8081/repository/sai/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexusid</id>
+                    <name>sai</name>
 		    <url>http://10.142.0.13:8081/repository/sai/</url>
 		</repository>
   	</distributionManagement>
