--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,13 @@
 		 <snapshotRepository>
 		    <id>nexusid</id>
                     <name>sai</name>
-		    <url>http://10.142.0.13:8081/repository/sai/</url>
+		    <url>http://10.142.0.13:8081/repository/maven-snapshots/</url>
 		 </snapshotRepository>
 		
 		<repository>
 		    <id>nexusid</id>
                     <name>sai</name>
-		    <url>http://10.142.0.13:8081/repository/sai/</url>
+		    <url>http://10.142.0.13:8081/repository/maven-releases/</url>
 		</repository>
   	</distributionManagement>
 <build>
